--- a/index.html
+++ b/index.html
@@ -19,20 +19,22 @@
 
   <div id="weatherContainer">
     <div id="currentWeather">
-      <h2>Current Weather</h2>
+      <h2>Current Weather
+        Today(Day1)
+      </h2>
       <p id="currentDate">Date</p>
-      <img id="currentIcon" src=" " alt="Weather Icon">
+      <img id="currentIcon" src="" alt="Weather Icon">
       <p id="currentTemp">Temperature</p>
       <p id="currentHumidity">Humidity</p>
       <p id="currentWindSpeed">Wind Speed</p>
     </div>
 
     <div id="forecastWeather">
-      <h2>Next 4 days</h2>
+      <h2>Next Days' Forecast</h2>
       <div id="iconsContainer">
-        <!-- Day 1 -->
+        <!-- Day 2 -->
         <div class="icons">
-          <p class="weather" id="day1"></p>
+          <p class="weather" id="day1">Day2</p>
           <img class="weather-icon" id="img1" src="" alt="Weather Icon">
           <p class="temp" id="temp1"></p>
           <p class="humidity" id="humidity1"></p>
@@ -41,7 +43,7 @@
 
         <!-- Day 2 -->
         <div class="icons">
-          <p class="weather" id="day2"></p>
+          <p class="weather" id="day2">Day3</p>
           <img class="weather-icon" id="img2" src="" alt="Weather Icon">
           <p class="temp" id="temp2"></p>
           <p class="humidity" id="humidity2"></p>
@@ -50,7 +52,7 @@
 
         <!-- Day 3 -->
         <div class="icons">
-          <p class="weather" id="day3"></p>
+          <p class="weather" id="day3">Day4</p>
           <img class="weather-icon" id="img3" src="" alt="Weather Icon">
           <p class="temp" id="temp3"></p>
           <p class="humidity" id="humidity3"></p>
@@ -59,12 +61,13 @@
 
         <!-- Day 4 -->
         <div class="icons">
-          <p class="weather" id="day4"></p>
+          <p class="weather" id="day4">Day5</p>
           <img class="weather-icon" id="img4" src="" alt="Weather Icon">
           <p class="temp" id="temp4"></p>
           <p class="humidity" id="humidity4"></p>
           <p class="windSpeed" id="windSpeed4"></p>
         </div>
+
       </div>
     </div>
   </div>
