link correctly css and style

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <div id="weatherContainer">
     <div id="currentWeather">
-      <h2>Current Weather
+      <h2>Current Weather/
         Today(Day1)
       </h2>
       <p id="currentDate">Date</p>
