--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <center>
     <h1 id="Header1">5 Days Weather Forecast App</h1>
     <p id="Container">City: <input type="text" id="cityInput"></p>
-    <button id="myBtn">Search</button>
+    <button id="myBtn">Searchs</button>
     <h2 id="cityName">------</h2>
   </center>
 
