fixin html links

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="assets/style.css"
+  <link rel="stylesheet" href="assets/style.css">
   <title>5 Days Weather Forecast Application</title>
 </head>
 
@@ -13,15 +13,13 @@
   <center>
     <h1 id="Header1">5 Days Weather Forecast Apps</h1>
     <p id="Container">City: <input type="text" id="cityInput"></p>
-    <button id="myBtn">Searchs</button>
+    <button id="myBtn">Search</button>
     <h2 id="cityName">------</h2>
   </center>
 
   <div id="weatherContainer">
     <div id="currentWeather">
-      <h2>Current day Weather
-        Today(Day1)
-      </h2>
+      <h2>Current day Weather Today (Day1)</h2>
       <p id="currentDate">Date</p>
       <img id="currentIcon" src="" alt="Weather Icon">
       <p id="currentTemp">Temperature</p>
