--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <center>
-    <h1 id="Header1">5 Days Weather Forecast Apps</h1>
+    <h1 id="Header1">5 Days Weather Forecast App</h1>
     <p id="Container">City: <input type="text" id="cityInput"></p>
     <button id="myBtn">Search</button>
     <h2 id="cityName">------</h2>
