--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/assets/style.css">
-  <title>5 Days Weather Forecast App</title>
+  <link rel="stylesheet" href="/Assets/style.css">
+  <title>5 Days Weather Forecast Apop</title>
 </head>
 
 <body>
@@ -71,7 +71,7 @@
     <h2>Search History</h2>
   </div>
 
-  <script src="/assets/script.js"></script>
+  <script src="/Assets/script.js"></script>
 </body>
 
 </html>
