--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <h2>Search History</h2>
   </div>
 
-  <script src="./assets/script.js"></script>
+  <script src="/assets/script.js"></script>
 </body>
 
 </html>
